--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Default¯CSS */
+/* Defaultï¿½CSS */
 html, body, div, span,    
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,   
 a, abbr, acronym, address, big, cite, code,   
@@ -359,6 +359,46 @@ a:hover {color: #FFFFFF;	background-color: #458FD2;}
   	height: 50px;
 }
 .content-right .comment-list .comment-content {
+	margin:10px 0 0 70px;
+	line-height: 18px;
+}
+.content-right-comment {
+	float: right;
+  	width: 310px;
+	}
+.content-right-comment h2 {
+	font-size: 16px;
+  	font-weight: normal;
+	color: #898989;
+}
+.content-right-comment .comment-list {
+	margin:20px 0 20px 0;
+	font-size: 12px;
+}
+.content-right-comment.comment-list .comment-item {
+	overflow: hidden;
+  	zoom: 1;
+  	margin-bottom: 24px;
+  	padding-bottom: 24px;
+  	border-bottom: 1px dashed #eaeaea;
+}
+.content-right-comment .comment-list .comment-meta {
+	color: #666;
+  	padding: 5px 0;
+	background-color: #F8F8F8;
+	line-height: 14px;
+}
+.content-right-comment .comment-list .pic {
+	padding-top: 10px;
+	margin-right: 20px;
+	float:left;
+}
+.content-right-comment .comment-list .pic img {
+	border-radius: 10px;
+	width: 50px;
+  	height: 50px;
+}
+.content-right-comment .comment-list .comment-content {
 	margin:10px 0 0 70px;
 	line-height: 18px;
 }
