--- a/css/style.css
+++ b/css/style.css
@@ -331,74 +331,34 @@ a:hover {color: #FFFFFF;	background-color: #458FD2;}
   	font-weight: normal;
 	color: #898989;
 }
-.content-right .cluster-list {
+.content-right .comment-list {
 	margin:20px 0 20px 0;
 	font-size: 12px;
 }
-.content-right .cluster-list .cluster-item {
+.content-right .comment-list .comment-item {
 	overflow: hidden;
   	zoom: 1;
   	margin-bottom: 24px;
   	padding-bottom: 24px;
   	border-bottom: 1px dashed #eaeaea;
 }
-.content-right .cluster-list .cluster-meta {
+.content-right .comment-list .comment-meta {
 	color: #666;
   	padding: 5px 0;
 	background-color: #F8F8F8;
 	line-height: 14px;
 }
-.content-right .cluster-list .pic {
+.content-right .comment-list .pic {
 	padding-top: 10px;
 	margin-right: 20px;
 	float:left;
 }
-.content-right .cluster-list .pic img {
+.content-right .comment-list .pic img {
 	border-radius: 10px;
 	width: 50px;
   	height: 50px;
 }
-.content-right .cluster-list .cluster-content {
-	margin:10px 0 0 70px;
-	line-height: 18px;
-}
-.content-right-comment {
-	float: right;
-  	width: 310px;
-	}
-.content-right-comment h2 {
-	font-size: 16px;
-  	font-weight: normal;
-	color: #898989;
-}
-.content-right-comment .comment-list {
-	margin:20px 0 20px 0;
-	font-size: 12px;
-}
-.content-right-comment.comment-list .comment-item {
-	overflow: hidden;
-  	zoom: 1;
-  	margin-bottom: 24px;
-  	padding-bottom: 24px;
-  	border-bottom: 1px dashed #eaeaea;
-}
-.content-right-comment .comment-list .comment-meta {
-	color: #666;
-  	padding: 5px 0;
-	background-color: #F8F8F8;
-	line-height: 14px;
-}
-.content-right-comment .comment-list .pic {
-	padding-top: 10px;
-	margin-right: 20px;
-	float:left;
-}
-.content-right-comment .comment-list .pic img {
-	border-radius: 10px;
-	width: 50px;
-  	height: 50px;
-}
-.content-right-comment .comment-list .comment-content {
+.content-right .comment-list .comment-content {
 	margin:10px 0 0 70px;
 	line-height: 18px;
 }
@@ -542,6 +502,38 @@ a:hover {color: #FFFFFF;	background-color: #458FD2;}
   	height: 50px;
 }
 .content-right .item-comment-list .comment-content {
+	margin:10px 0 0 70px;
+	line-height: 18px;
+}
+.content-right-cluster .item-cluster-list {
+	margin:20px 0 20px 0;
+	font-size: 12px;
+}
+.content-right-cluster .item-cluster-list .cluster-item {
+	overflow: hidden;
+  	zoom: 1;
+  	margin-bottom: 24px;
+  	padding-bottom: 24px;
+  	border-bottom: 1px dashed #eaeaea;
+}
+.content-right-cluster .item-cluster-list .cluster-meta {
+	color: #666;
+  	padding: 5px 0 5px 5px;
+  	background-color: #F8F8F8;
+  	margin-left: 70px;
+  	line-height: 14px;
+}
+.content-right-cluster .item-cluster-list .pic {
+	margin-right: 20px;
+	float:left;
+}
+.content-right-cluster .item-cluster-list .pic img {
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	width: 50px;
+  	height: 50px;
+}
+.content-right-cluster .item-cluster-list .cluster-content {
 	margin:10px 0 0 70px;
 	line-height: 18px;
 }
